fix wide legend collapse toggle button

--- a/mapApp/static/mapApp/css/index.css
+++ b/mapApp/static/mapApp/css/index.css
@@ -199,7 +199,7 @@ span.date{
 
 /* Set max height for legend and enable scrolling */
 .leaflet-control-layers{
-  width: 290px;
+  max-width: 290px;
   max-height: 80vh;
   overflow: auto;
 }
